Fixed image overlap

--- a/VibeSyncApp/ClientApp/src/components/SongSearch.css
+++ b/VibeSyncApp/ClientApp/src/components/SongSearch.css
@@ -164,7 +164,7 @@
 .search-page {
     display: flex;
     flex-direction: column;
-    margin-top: -20px;
+    margin-top: -11px;
     align-items: center; /* Center content horizontally */
 }
 
